--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    
+    background: linear-gradient(to bottom, rgb(244 244 245), rgb(212 212 216));
     margin: 0 auto;
   
   }
