--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ body {
   margin: 0;
   
 }
-
+.grid > div{
+  color: rgb(25, 25, 162);
+  text-align: center;
+  font-size: 1.4rem;
+  padding: 10px;
+}
 
 
