--- a/Callender/calenderFront.css
+++ b/Callender/calenderFront.css
@@ -1,22 +1,24 @@
 /* c.css */
 
 .container {
-    max-width: 100%;
+    max-width: 100vw;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px;
+    padding: auto;
     padding-top: 50px ;
   }
   
   .grid {
-    display: grid;
-    grid-template-columns: repeat(7, minmax(0, 1fr));
-    gap: 5rem;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    gap: 2.5px;
  
     
   }
   
   .btn {
+    min-height: auto;
+    min-width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
