--- a/src/pages/home/slider.css
+++ b/src/pages/home/slider.css
@@ -1,83 +1,92 @@
 .slider {
-    width: 65%;
-    height: 90vh;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transform: translateX(-50%);
-    transition: all 0.5s ease;
-  }
-  
-  @media screen and (min-width: 600px) {
-    .slide img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  
+  display: flex;
+  width: 100vh;
+  height: 90vw;
+  position: relative;
+  overflow: hidden;
+  flex: 1;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 90vw;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: all 0.5s ease;
+}
+
+@media screen and (min-width: 600px) {
   .slide img {
-     width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 90vw;
+    object-fit: cover; /* Ensure the image covers the entire slide */
   }
-  
-  .current {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  
-  .content {
-    position: absolute;
+}
+
+.slide img {
+  width: 100vw;
+  height: 90vw;
+}
+
+.current {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.content {
+  position: absolute;
+  left: 10%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  max-width: 80vh;
+  min-width: 300px;
+  min-height: 100px; /* Adjust the width as per your needs */
+  color: #fff;
+  padding: 4rem;
+  background: rgba(0, 0, 0, 0.3);
+  animation: slide-up 1s ease 0.5s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+}
+
+@keyframes slide-up {
+  0% {
+    visibility: visible;
     top: 23rem;
-    left: 5rem;
-    opacity: 0;
-    width: 50%;
-    color: #fff;
-    padding: 3rem;
-    background: rgba(0, 0, 0, 0.3);
-    animation: slide-up 1s ease 0.5s;
-     animation-delay: 0.5s;
-    animation-fill-mode: forwards;
-    visibility: hidden;
   }
-  
-  @keyframes slide-up {
-    0% {
-      visibility: visible;
-      top: 23rem;
-    }
-    100% {
-      visibility: visible;
-      top: 17rem;
-    }
+  100% {
+    visibility: visible;
+    top: 50%;
   }
-  
-  @media screen and (max-width: 600px) {
-    .content {
-      width: 80%;
-    }
+}
+
+@media screen and (max-width: 600px) {
+  .content {
+    display: flex;
+    max-width: auto;
+    max-height: auto;
+    overflow-y: auto; /* Add scrollbars when content exceeds viewport height */
+    padding: auto; /* Adjust padding as per your needs */
   }
-  
-  .content > * {
-    color: #fff;
-    margin-bottom: 1rem;
-  }
-  
-  .current .content {
-    opacity: 1;
-    transform: translateX(0);
-    transition: all 0.5s ease;
-  }
-  
-  hr {
-    height: 2px;
-    background: white;
-    width: 50%;
-  }
+}
+
+.content > * {
+  color: #fff;
+  margin-bottom: 1rem;
+}
+
+.current .content {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s ease;
+}
+
+hr {
+  height: 2px;
+  background: white;
+  width: auto;
+}
