--- a/Callender/calenderFront.css
+++ b/Callender/calenderFront.css
@@ -1,36 +1,55 @@
 /* c.css */
 
-.container {
-    max-width: 100vw;
-    margin-left: auto;
-    margin-right: auto;
-    padding: auto;
-    padding-top: 50px ;
-  }
+.custom-container {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--neutral-700);
+  padding: 2rem;
+  font-family: monospace;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 1.25rem;
   
-  .grid {
-    display: inline-grid;
-    grid-template-columns: auto auto auto;
-    gap: 2.5px;
- 
-    
+}
+
+.custom-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+@media (min-width: 640px) {
+  .custom-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 0.5rem;
   }
+
+  .custom-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 768px) {
+  .custom-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .custom-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1280px) {
+  .custom-grid {
+    grid-template-columns: repeat(7, 1fr);
+  }
+}
+
   
-  .btn {
-    min-height: auto;
-    min-width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    color: black;
-    background-color: rgb(6 182 212 );
-    font-size: large;
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  }
-  .a, .s {
-    border: 2px solid black;
-    background-color: cyan;
-  }
+  
+  
   
