--- a/src/pages/Callendar/calenderFront.css
+++ b/src/pages/Callendar/calenderFront.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--neutral-700);
-  padding: 2rem;
+  padding: 3rem;
   font-family: monospace;
   align-items: center;
   justify-content: space-evenly;
@@ -17,8 +17,7 @@
   grid-template-columns: 1fr;
   gap: 1rem;
 }
-
-@media (min-width: 640px) {
+@media (min-width: 300px) {
   .custom-container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -27,19 +26,26 @@
   }
 
   .custom-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (min-width: 768px) {
-  .custom-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 500px) {
+  .custom-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 0.5rem;
+  }
+
   .custom-grid {
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 800px) {
+  .custom-grid {
+    grid-template-columns: repeat(6, 1fr);
   }
 }
 
@@ -49,7 +55,7 @@
   }
 }
 
-  
+
   
   
   
