--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -16,7 +16,7 @@
     background: transparent;
     text-transform: uppercase;
     transition: all .35s;
-    padding: 2px;
+    padding: 0;
   }
   
   .btt:before,
@@ -27,9 +27,10 @@
     height: 100%;
     top: -100%;
     left: 0;
-    background: black;
+    background: gold;
     z-index: -1;
     transition: all .35s;
+
   }
   
   .btt:before{
@@ -37,11 +38,12 @@
   }
   
   .btt:after{
-    transition-delay: .2s;
+    transition-delay: .1s;
   }
   
   .btt:hover{
     color: #fff;
+    border: 3px  gold;	;
   }
   
   .btt:hover:before,
